--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "odin-battleship",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -19,6 +22,12 @@
   "homepage": "https://github.com/Etheryen/odin-battleship#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
-    "jest": "^29.4.3"
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.4.3",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
